--- a/src/assets/css/About.css
+++ b/src/assets/css/About.css
@@ -1,24 +1,24 @@
 
 
-body {
+/* .About {
     background-image: url('/Users/yaswanth/Desktop/Advanced-app/Yoga-Portal/src/assets/Image/wallpaperflare.com_wallpaper (1).jpg');  
-    background-size: 5000px; 
+    background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat;
     height: 100pc;
     
-  }
+  } */
   
   
   
   .About {
     color: #e0f4f5;
     text-align: center;
-    size: 500px;;
+    size: 00px;;
   }
   
   p {
-    color: #000000; 
+    color: white  ; 
     font-variant-position: center;
     font-size: 20px;
   }
