--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -5,14 +5,15 @@
 .yoga{
     text-align: center;
     size: 60px;
+    margin-top: 0;
 }
 
 .bg {
-    background-image: url('../Image/wallpaperflare.com_wallpaper.jpg'); 
-    background-size: 8000px; 
+    background-image: url('../Image/gb.jpg'); 
+    background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat;
-    height: 100pc;
+    height: 100vh;
     
      
     
@@ -30,4 +31,4 @@
     font-variant-position: center;
     font-size: 20px;
   }
-  
+   
