--- a/src/assets/css/Login.css
+++ b/src/assets/css/Login.css
@@ -5,7 +5,7 @@ body {
     background-color: #f0f0f0;
     margin: 0;
     padding: center;
-    background-image: url('/Users/yaswanth/Desktop/Advanced-app/Yoga-Portal/src/assets/Image/wallpaperflare.com_wallpaper (2).jpg'); 
+    background: url('../Image/wlecom.jpg') no-repeat center center/cover; 
   }
   
   .container {
@@ -14,7 +14,7 @@ body {
   }
   
   h2 {
-    color: #333;
+    color: #faf5f5;
   }
   
   form {
