--- a/src/assets/css/Home.css
+++ b/src/assets/css/Home.css
@@ -1,34 +1,21 @@
-.p-id {
-    color: rgb(4, 0, 0);
-    text-align: center;
-}
-.yoga{
-    text-align: center;
-    size: 60px;
-    margin-top: 0;
-}
-
+ 
 .bg {
     background-image: url('../Image/gb.jpg'); 
     background-size: cover; 
-    background-position: center; 
+    background-position: center center; /* Center the background image */
     background-repeat: no-repeat;
-    height: 100vh;
-    
-     
-    
-  }
-  
-  
-  .yoga {
+    height: 100vh;  
+}
+
+.yoga {
+    text-align: center;
     color: #060506; 
-    size: 300px;;
-    padding: auto;
-  }
-  
-  .p-id {
+    font-size: 60px; /* Corrected the property name */
+    margin-top: 0;
+}
+
+.p-id {
+    text-align: center; /* Center the text */
     color: #000000; 
-    font-variant-position: center;
     font-size: 20px;
-  }
-   
+}
