--- a/src/assets/css/Profile.css
+++ b/src/assets/css/Profile.css
@@ -1,58 +1,68 @@
+/* Profile.css */
+body {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  background-color: #f5f5f5;
+}
 
+.container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 20px;
+}
 
-.user-dashboard {
-    display: flex;
-    flex-direction: column;
-    max-width: 800px;
-    margin: 0 auto;
-    padding: 20px;
-  }
-  .pa{
-    color: white;
-    text-align: center;
-  }
-  .he{text-align: center;}
-  
-  .profile-section {
-    text-align: center;
-    margin-bottom: 20px;
-    /*   
-        img {
-        width: 100px;
-        height: 100px;
-        border-radius: 50%;
-        object-fit: cover;
-        margin-bottom: 10px;
-        } */
-  
-    h2 {
-      font-size: 1.5em;
-      margin-bottom: 5px;
-    }
-  
-    
-  }
-  
-  .class-schedule-section,
-  .booked-classes-section,
-  .progress-section {
-    margin-bottom: 20px;
-  
-    h3 {
-      font-size: 1.2em;
-      margin-bottom: 10px;
-    }
-  
-    ul {
-      list-style: none;
-      padding: 0;
-  
-      li {
-        margin-bottom: 8px;
-        font-size: 0.9em;
-  
-        
-      }
-    }
-  }
-  
+.header {
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+}
+
+.header-title {
+  margin: 0;
+}
+
+.profile-container {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 20px;
+  margin-top: 20px;
+}
+
+.profile-heading {
+  font-size: 24px;
+  margin-bottom: 20px;
+  color: #333;
+}
+
+.profile-item {
+  margin-bottom: 10px;
+  display: center;
+}
+
+.profile-label {
+  font-weight: bold;
+  color: #666;
+}
+
+.profile-value {
+  color: #000; /* Changed to black */
+}
+
+/* Button Style */
+.button {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.button:hover {
+  background-color: #0056b3;
+}
